@@ -6,6 +6,7 @@
  - Mod: Sweepers adjusted for balance.
  - Fix: Most buildings should no longer ignore uni level.
  - Add: Overheating Parliament does damage.
+ - Fix: Buildings should no longer get stuck in upgrading state.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
